--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- load the sylesheet for the main page -->
-    <link href="/style/mainpage.css" rel="stylesheet" />
+    <link href="style/mainpage.css" rel="stylesheet" />
     <h1 class="main_header"> GUGC Intern slaves </h1>
 
     <nav id="topMenu">
