--- a/internship.html
+++ b/internship.html
@@ -5,7 +5,7 @@
     <title> Projects</title>
 </head>
 <body>
-    <link href="../style/mainpage.css" rel="stylesheet" />
+    <link href="style/mainpage.css" rel="stylesheet" />
     <h1 class="main_header"> GUGC Intern slaves </h1>
 
     <nav id="topMenu">
