--- a/index.html
+++ b/index.html
@@ -4,75 +4,171 @@
     <meta charset="UTF-8">
     <meta name="me myself and I" content="all about me!">
 
-    <title> pmj::평미주</title>
+    <title> All about me </title>
 </head>
 <body>
+<div class="div_body_border">
+    <div class="div_body">
     <!-- load the sylesheet for the main page -->
     <link href="../style/mainpage.css" rel="stylesheet" />
-    <h1 class="main_header"> GUGC Intern slaves </h1>
+    <p class="main_header"> PRACTICE </p>
 
+<div class="sticky">
     <nav id="topMenu">
-        <ul>
+        <ul class="Menu">
             <li class="topMenuLi">
-                <a class="menuLink" href="index.html"> About us</a>
+                <a class="menuLink" href="index.html"> Personal </a>
                 <ul class="submenu">
-                    <li><a class="submenuLink" href="index.html#all"> The Team</a></li>
-                    <li><a class="submenuLink" href="index.html#ju"> Ju Hyung Lee</a></li>
-                    <li><a class="submenuLink" href="index.html#mi"> Pyeong Eun Kim</a></li>
-                    <li><a class="submenuLink" href="index.html#py"> Mi Jeong Lee</a></li>
+                    <li><a class="submenuLink" href="index.html#general"> General </a></li>
+                    <li><a class="submenuLink" href="index.html#contact"> Contact </a></li>
                 </ul>
             </li>
             <li>|</li>
             <li class="topMenuLi">
-                <a class="menuLink" href="internship.html"> Projects</a>
+                <a class="menuLink" href="internship.html"> Academics </a>
                 <ul class="submenu">
                     <li><a class="submenuLink longLink" href="internship.html#winterinternship"> GUGC Internship Winter 2018</a></li>
                     <li><a class="submenuLink longLink" href="internship.html#kcc"> Korea Computer Congress 2018 </a></li>
                     <li><a class="submenuLink longLink" href="internship.html#summerinternship"> GUGC Intensed Study Summer 2018</a></li>
+                    <li><a class="submenuLink longLink" href="internship.html#lab"> Lab reports </a></li>
                 </ul>
             </li>
             <li>|</li>
             <li class="topMenuLi">
-                <a class="menuLink" href="equipment.html"> Our equipment</a>
+                <a class="menuLink" href="hobbie.html"> Photos </a>
                 <ul class="submenu">
-                    <li><a class="submenuLink" href="equipment.html#ju_eq"> Ju Hyung Lee</a></li>
-                    <li><a class="submenuLink" href="equipment.html#py_eq"> Pyeong Eun Kim</a></li>
-                    <li><a class="submenuLink" href="equipment.html#mi_eq"> Mi Jeong Lee</a></li>
+                    <li><a class="submenuLink" href="hobbie.html#equip"> Daily drivers </a></li>
+                    <li><a class="submenuLink" href="hobbie.html#photos"> Taken photos </a></li>
                 </ul>
             </li>
         </ul>
     </nav>
+</div>
 
-    <p class="subheader" id="all"> <br /> Introducing ourselves</p>
-    <img src="img/img1.jpg" alt="us">
-    <p class="description">
-        We are senior students in Ghent University Global Campus! From the left, it's Mi Jeong Lee,
-        Pyeong Eun Kim and Ju Hyung Lee. All three of us are majoring in "Molecular Biotechnology",
-        in which we mainly focus on studying combined application of molecular biology, biochemistry, immunology,
-        genetics and microbiology.
-        <br /><br />
-        Since GUGC tries to enlighten their students in various fields of study, we also had some
-        opportunities to get in touch with basic programming courses.
-    </p>
+    <p class="subheader" id="general"> <br /> General </p>
 
-    <p class="subheader" id="ju"> Ju Hyung Lee </p>
-    <p> <br /> <img src="img/ju_1.jpg"> <br /></p>
-    <ul>
-        <li><p class="description"> <strong>Age:</strong> 21 </p></li>
-        <li><p class="description"> <strong>School:</strong> Universiteit Gent</p></li>
-        <li><p class="description"> <strong>Grade/Major:</strong> Senior/Molecular Biotechnology</p></li>
-        <li><p class="description"> <strong>Hobby:</strong> Computer gaming, Wasting money on techs</p></li>
+    <!-- Slideshow for STT-GUI -->
+    <link href="../style/slideshow.css" rel="stylesheet" />
+    <script src="../style/slideshow_java.js"></script>
+
+    <div class="slidestt">
+
+        <div class="mySlides" id="initial">
+            <div class="numbertext">1 / 3</div>
+            <img src="img/ju_3.jpg" width="500px">
+            <div class="text"> 2019 Munich, Germany </div>
+        </div>
+
+        <div class="mySlides">
+            <div class="numbertext">2 / 3</div>
+            <img src="img/ju_1.jpg" width="500px">
+            <div class="text"> 2017 Hokkaido, Japan </div>
+        </div>
+
+        <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="img/ju_2.jpg" width="500px">
+            <div class="text"> 2018 Rome, Italy</div>
+        </div>
+
+        <!-- '다음'과 '전' 버튼-->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- 현재 몇번째 이미지인지 알려주는 땡땡이 -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <ul id="personal">
+        <li><p class="description"> <strong>Age:</strong> 22 </p></li>
+        <li><p class="description"> <strong>School:</strong> Ghent University Global Campus </p></li>
+        <li><p class="description"> <strong>Grade/Major:</strong> Senior/Molecular Biotechnology </p></li>
+        <li><p class="description"> <strong>Hobby:</strong> Photography </p></li>
     </ul>
 
-    <p class="subheader" id="mi"> Mi Jeong Lee </p>
+    <p class="subheader" id="history"> Brief timeline </p>
     <p class="description">
-        &lt;To be more added&gt;
+        <strong> 1997: </strong>
+        <br> - Born on 10th February in Daegu, South Korea.
+    </p>
+    <p class="description">
+        <strong> 2001: </strong>
+        <br/> - Moved to Iran due to father's business. Made living in the capital city, Tehran.
+        <br/> - Entered Tehran International School (TIS) for pre-school education.
+    </p>
+    <p class="description">
+        <strong> 2003: </strong>
+        <br/> - Entered "Tehran Korean School" (테헤란 한국학교) for elementary education.
+    </p>
+    <p class="description">
+        <strong> 2006: </strong>
+        <br/> - Moved to United Arab Emirates (UAE) due to father's business. Made living in the city Dubai.
+        <br/> - Transferred to "Dubai American Academy" (DAA) as a 3rd grade student.
+        <br/> - A first experience of an American curriculum.
+    </p>
+    <p class="description">
+        <strong> 2007: </strong>
+        <br/> - Moved to South Korea due to father's business. Made living in the capital city, Seoul.
+        <br/> - Transferred to "Seoul Seoi Elementary School" (서울 서이초등학교) as a 4th grade student.
+    </p>
+    <p class="description">
+        <strong> 2008: </strong>
+        <br/> - By the end of 2008, Moved back to UAE due to father's business. Made living in the city Dubai.
+        <br/> - Transferred to "Royal Dubai School" (RDS) as "year 7" student.
+        <br/> - Also a first experience of a British curriculum.
+    </p>
+    <p class="description">
+        <strong> 2009: </strong>
+        <br/> - On October, the ministry of education decided to close the secondary school of RDS. Thus, grabbed an opportunity
+                to transfer to one of the most outstanding international schools in Dubai, "Wellington International School" (WIS)
+        <br/> - Transferred to WIS as a "year 8" student.
+    </p>
+    <p class="description">
+        <strong> 2010: </strong>
+        <br/> - Started International General Certificate of Secondary Education (iGCSE) syllabus as a "year 10" student.
+        <br/> - Choice of subjects: Triple science, Geography and Art.
+    </p>
+    <p class="description">
+        <strong> 2013: </strong>
+        <br/> - Graduated iGCSE syllabus on "year 11", stated International Baccalaureate (IB) program as a "year 12" student.
+        <br/> - Choice of subjects for IB: (Higher levels) Mathematics, Biology and Chemistry. (Standard levels) Language and Literature, Environmental Systems and Societies and Spanish Ab Initio.
+    </p>
+    <p class="description">
+        <strong> 2015: </strong>
+        <br/> - Graduated WIS by finishing the IB diploma program successfully.
+        <br/> - Admitted to "Ghent University Global Campus" (GUGC) for undergraduate studies.
+        <br/> - Moved back to Seoul, South Korea.
+    </p>
+    <p class="description">
+        <b> 2017: </b>
+        <br/> - Selected a major for undergraduate studies: Molecular Biotechnology.
+        <br/> - Gained a new hobby: photography.
+    </p>
+    <p class="description">
+        <strong> 2018: </strong>
+        <br/> - During the junior year, did an internship under one of the professors in GUGC.
+        <br/> - Integrated the achievements from the internship program into a paper for application to Korea Computer Congress 2018.
+        <br/> - Due to the acceptance of our paper, got an opportunity to attend the congress in Jeju Island.
+        <br/> - September: Students who managed to reach the senior year are obliged to study the first semester in the home campus, located in Gent, Belgium.
+    </p>
+    <p class="description">
+        <b> 2019: </b>
+        <br/> - Decided the topic for bachelor thesis: ""
     </p>
 
-    <p class="subheader" id="py"> Pyeong Eun Kim </p>
+    <p class="subheader" id="contact"> Contact / Visit me </p>
     <p class="description">
-        &lt;To be more added&gt;
+        <img src="img/mail.png" width="50px" align="left"> jhlee9702@hotmail.com
     </p>
-
+    </br>
+    <p class="description">
+        <img src="img/insta.jpg" width="50px" align="left"> @junius_0210
+    </p>
+    </div>
+</div>
 </body>
 </html>
